# MonDiary

./: README.md  pyproject.toml
MonDiary_app/: apps.py  models.py  urls.py  views.py
MonDiary_app/migrations/: 0001_initial.py
MonDiary_app/templates/: base.html  index.html
config/: settings.py
users/: forms.py  permissions.py  urls.py  utils.py  views.py
