[tool.poetry]
name = "MoneyDiary"
version = "0.1.1"
description = "Program for your money"
authors = ["Bityakov Paul"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
psycopg2-binary = "^2.9.9"
pillow = "^11.1.0"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
redis = "^5.0.14"
django-filter = "^25.1"
google-api-python-client = "^2.164.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
